feat: add user login endpoint
